2001-08-23  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/lang/reflect/Method/toString.java (test): Added
	test for method with array argument.

2001-08-19  John Leuner  <jewel@debian.org>

	* gnu/testlet/java/lang/Math/min.java: added some more tests for min that don't
	use string comparisons

2001-08-11  John Leuner  <jewel@debian.org>

	* gnu/testlet/java/text/ChoiceFormat/format.java (test): changed format to doformat 
	(doformat): changed name from format (conflicted with class name)

2001-08-09  Eric Blake  <ebb9@email.byu.edu>

	* gnu/testlet/java/lang/StringBuffer/plus.java (test): fix test to
	match JDK1.4
	* gnu/testlet/java/lang/reflect/Method/invoke.java (test): fix
	test to match JDK1.4
	* gnu/testlet/java/lang/reflect/Constructor/newInstance.java
	(test): fix test to match JDK1.4
	* gnu/testlet/java/lang/reflect/Array/newInstance.java (test):
	added more tests

2001-08-09  John Leuner  <jewel@debian.org>

	* gnu/testlet/java/lang/Math/min.java: added checkpoints
	* gnu/testlet/java/lang/System/arraycopy.java: Added checkPoint()s for various cases
	* gnu/testlet/java/lang/Object/clone.java: Added check that arrays have same length, type, component type

2001-08-09  John Leuner  <jewel@debian.org>

	* gnu/testlet/java/lang/reflect/Array/newInstance.java: Fixed original test
	Added test for Integer.TYPE
	Added test for String.class
	Added test for NegativeArraySizeException

2001-08-09  Eric Blake  <ebb9@email.byu.edu>

	* gnu/testlet/java/lang/Integer/getInteger.java (SM): fix
	ExceptionInInitializerError caused by security hole of last commit
	
2001-08-09  Eric Blake  <ebb9@email.byu.edu>

	* gnu/testlet/java/lang/Integer/IntegerTest.java
	(test_toHexString): make more accurate
	(test_Basics): test Integer.TYPE
	* gnu/testlet/java/lang/Integer/new_Integer.java (test): 
	add more tests, make more accurate
	* gnu/testlet/java/lang/Integer/getInteger.java (test): 
	add more tests
	* gnu/testlet/java/lang/Integer/compareTo.java: new file
	