@@ -1,3 +1,8 @@
+2001-09-03  Eric Blake  <ebb9@email.byu.edu>
+
+	* gnu/testlet/java/lang/String/CASE_INSENSITIVE_ORDER.java: Added
+	new test class.
+
 2001-08-23  Tom Tromey  <tromey@redhat.com>
 
 	* gnu/testlet/java/lang/reflect/Method/toString.java (test): Added
